Fixed header intro on mobile

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -186,7 +186,7 @@
     }
     &__intro {
       margin-top: 7.125rem;
-      padding: 0;
+      padding: 0 0 0 .8rem;
       background-color: rgba(255,255,255,.53);
       &__wrapper {
         &_title {
